--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background: #23252C;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.info--card_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.info--card_image {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px
 }
 
-.App-link {
-  color: #61dafb;
+.info--card_details {
+    background: black;
+    width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.info--card_details > h2{
+    margin-top: 21px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.info--card_details > h3 {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12.8px;
+    color: #F3BF99;
+    padding-top: 8px;
+    text-align: center;
+}
+
+.info--card_details > p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10.24px;
+    color: #F5F5F5;
+    text-align: center;
+    padding-top: 8px;
+}
+
+.info--card_buttons {
+    margin-top: 15px;
+    text-align: center; 
+}
+
+.info--card-btn_email {
+    background: #FFFFFF;
+    /* gray/300 */
+    border: 1px solid #D1D5DB;
+    box-sizing: border-box;
+    /* shadow/sm */
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    padding: 10px 15px;
+    width: 115px;
+    height: 34px;
+    margin-right: 17px;
+    font-size: 14px;
+}
+
+.info--card-btn_lkdin {
+    background: #5093E2;
+    color: #FFFFFF;
+    /* shadow/sm */
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    padding: 10px 15px;
+    width: 115px;
+    height: 34px;
+    font-size: 14px;
 }
