--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    /* padding: 2rem; */
 }
 
 .info--card_image {
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px
+    border-top-right-radius: 10px;
 }
 
 .info--card_details {
-    background: black;
+    background: #1A1B21;
     width: 400px;
 }
 
@@ -83,4 +83,58 @@ body {
     width: 115px;
     height: 34px;
     font-size: 14px;
+}
+
+/* About Section */
+.about--container {
+    color: #F5F5F5;
+    width: 400px;
+    margin: 0 auto;
+    background: #1A1B21;
+    padding: 0px 36px;
+}
+
+.about--heading {
+    padding-top: 2rem;
+}
+
+.about--details {
+    padding-top: 10px;
+    color: #DCDCDC;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+/* Interests section */
+.interests--container {
+    color: #F5F5F5;
+    width: 400px;
+    margin: 0 auto;
+    background: #1A1B21;
+    padding: 0px 36px;
+    /* margin-top: 27px; */
+}
+
+.interests--heading {
+    padding-top: 2rem;
+}
+
+.interests--details {
+    padding: 10px 0px 30px 0px;
+    color: #DCDCDC;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+/* Links section */
+.links--container {
+    display: flex;
+    width: 400px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px 35px;
+    background: #161619;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;    
 }
